better load-more button style, resolve possible flex bug on safari

--- a/public/styles/style.sass
+++ b/public/styles/style.sass
@@ -50,13 +50,10 @@ section, div
     padding-left: 0   // freaking list style
 
 .feed-content
-  display: flex
-  flex-direction: column
   flex: 3
-  align-items: center
   overflow-y: scroll
   padding: 5px
-  //height: 100%
+  text-align: center
   h2
     border-bottom: 1px solid grey
     display: inline-block
@@ -64,9 +61,9 @@ section, div
       text-decoration: none
       color: black
   .feed-content-list
+    text-align: start
     margin-bottom: 15px
   .feed-content-loadmore  // "Load More" button
-    display: block
     width: 100px
     line-height: 30px
     font-size: 16px
